--- a/repo/index.html
+++ b/repo/index.html
@@ -1,1 +1,1 @@
-<a href="ADDON_ID_HERE-VERSION_NUMBER_HERE.zip">ADDON_ID_HERE-VERSION_NUMBER_HERE.zip</a>
+<a href="repo.icewolfe-1.0.zip">Arepo.icewolfe-1.0.zip</a>
